--- a/example/Caddyfile
+++ b/example/Caddyfile
@@ -1,66 +1,66 @@
 {
-    # 全局配置
-    order gfw before respond
-    
-    # 日志配置
-    log {
-        level INFO
-    }
+	# 全局配置
+	order gfw before respond
+
+	# 日志配置
+	log {
+		level INFO
+	}
 }
 
 # 示例站点配置
 :80 {
-    # 启用GFW模块
-    gfw {
-        # 规则文件路径
-        block_rule_file /etc/caddy/rules.txt
-        
-        # 黑名单IP的TTL时间
-        ttl 24h
-        
-        # 直接配置的规则
-        block_rule ip:192.168.1.1
-        block_rule url:/admin
-        block_rule ua:curl
-    }
+	# 启用GFW模块
+	gfw {
+		# 规则文件路径
+		block_rule_file rules.txt
 
-    # 反向代理配置
-    reverse_proxy localhost:8080
+		# 黑名单IP的TTL时间
+		ttl 24h
+
+		# 直接配置的规则
+		block_rule ip:192.168.1.1
+		block_rule url:/admin
+		block_rule ua:curl
+	}
+
+	# 反向代理配置
+	reverse_proxy localhost:8080
 }
 
 # 安全防护示例
 :443 {
-    # 启用GFW模块
-    gfw {
-        # 规则文件路径
-        block_rule_file /etc/caddy/security_rules.txt
-        
-        # 黑名单IP的TTL时间
-        ttl 12h
-        
-        # 安全规则
-        block_rule ip:10.0.0.0/24
-        block_rule url:/wp-login.php
-        block_rule url:/phpmyadmin
-        block_rule ua:sqlmap
-        block_rule ua:nmap
-    }
+	# 启用GFW模块
+	gfw {
+		# 规则文件路径
+		block_rule_file rules.txt
 
-    # TLS配置
-    tls {
-        protocols tls1.2 tls1.3
-    }
+		# 黑名单IP的TTL时间
+		ttl 12h
 
-    # 反向代理配置
-    reverse_proxy localhost:8443
+		# 安全规则
+		block_rule ip:10.0.0.0/24
+		block_rule url:/wp-login.php
+		block_rule url:/phpmyadmin
+		block_rule ua:sqlmap
+		block_rule ua:nmap
+	}
+
+	# TLS配置
+	tls {
+		protocols tls1.2 tls1.3
+	}
+
+	# 反向代理配置
+	reverse_proxy localhost:8443
 }
 
 # HTTPS站点配置
 http://127.0.0.1.sslip.io:80 {
-    # 启用GFW模块
-    gfw {
-        block_rule_file ./rules.txt
-        ttl 24h
-    }
-    respond "Hello, 127.0.0.1.sslip.io"
+	# 启用GFW模块
+	gfw {
+		block_rule_file ./rules.txt
+		ttl 24h
+	}
+	respond "Hello, 127.0.0.1.sslip.io"
 }
